--- a/Charcoal/root/src/login.html
+++ b/Charcoal/root/src/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="full">
 
 <head>
 
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>[% page_title %]</title>
+    <title>Login: Charcoal</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../static/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -19,6 +19,7 @@
 
     <!-- Custom CSS -->
     <link href="../static/dist/css/sb-admin-2.css" rel="stylesheet">
+    <link href="../static/dist/css/full.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="../static/bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -34,34 +35,38 @@
 
 <body>
 
-    <div class="container">
+    <div class="container-fluid col-md-4 col-md-offset-4">
         <div class="row">
-            <div class="col-md-4 col-md-offset-4">
+            
                 <div class="login-panel panel panel-default">
                     <div class="panel-heading">
-                        <h3 class="panel-title">Please Sign In</h3>
+                        <h1 class="panel-title">Please login to begin.</h1>
                     </div>
                     <div class="panel-body">
                         <form role="form" action="[% submit_url %]" method="post">
                             <fieldset>
                                 <div class="form-group">
-                                    <input class="form-control" placeholder="E-mail" name="username" type="email" autofocus>
+                                    <input class="form-control" placeholder="E-mail" name="username" type="email" autofocus required>
                                 </div>
                                 <div class="form-group">
-                                    <input class="form-control" placeholder="Password" name="password" type="password" value="">
+                                    <input class="form-control" placeholder="Password" name="password" type="password" value="" required>
                                 </div>
-                                <div class="checkbox">
+                               <!-- <div class="checkbox">
                                     <label>
                                         <input name="remember" type="checkbox" value="Remember Me">Remember Me
                                     </label>
                                 </div>
+                                -->
                                 <!-- Change this to a button or input when using this as a form -->
                                 <button class="btn btn-lg btn-success btn-block" onclick="submit">Login</button>
                             </fieldset>
                         </form>
                     </div>
+                    <div class="panel-footer">
+                        <p align="right">Don't have an account? Click here to get one.</p>
+                    </div>
                 </div>
-            </div>
+            
         </div>
     </div>
 
