--- a/Charcoal/root/src/login.html
+++ b/Charcoal/root/src/login.html
@@ -35,12 +35,12 @@
 
 <body>
 
-    <div class="container-fluid col-md-4 col-md-offset-4">
+    <div class="container col-lg-3 col-lg-offset-9">
         <div class="row">
-            
-                <div class="login-panel panel panel-default">
+                <div class="login-panel panel panel-defaul">
                     <div class="panel-heading">
-                        <h1 class="panel-title">Please login to begin.</h1>
+                        <h1 class="panel-title" align="center">Welcome to charcoal.</h1>
+			<h1 class="panel-title" align="center"><br/>Please login to begin.</h1>
                     </div>
                     <div class="panel-body">
                         <form role="form" action="[% submit_url %]" method="post">
@@ -66,7 +66,6 @@
                         <p align="right">Don't have an account? Click here to get one.</p>
                     </div>
                 </div>
-            
         </div>
     </div>
 
