ACL display made neater

--- a/Charcoal/root/src/login.html
+++ b/Charcoal/root/src/login.html
@@ -35,12 +35,11 @@
 
 <body>
 
-    <div class="container col-lg-3 col-lg-offset-9">
+    <div class="container col-xs-4 col-xs-offset-4">
         <div class="row">
                 <div class="login-panel panel panel-defaul">
                     <div class="panel-heading">
-                        <h1 class="panel-title" align="center">Welcome to charcoal.</h1>
-			<h1 class="panel-title" align="center"><br/>Please login to begin.</h1>
+			Please Login to begin...
                     </div>
                     <div class="panel-body">
                         <form role="form" action="[% submit_url %]" method="post">
@@ -58,7 +57,7 @@
                                 </div>
                                 -->
                                 <!-- Change this to a button or input when using this as a form -->
-                                <button class="btn btn-lg btn-success btn-block" onclick="submit">Login</button>
+                                <button class="btn btn-sm btn-success btn-block" onclick="submit">Login</button>
                             </fieldset>
                         </form>
                     </div>
